--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 <div class="dars">
     <h2>Darsdegi ishlar</h2>
-    <a href="#"> 1 dars</a>
+    <a href="https://fuz1700.github.io/epa-muhammdniyoz/"> 1 dars</a>
     <a href="#"> 2 dars</a>
     <a href="#"> 3 dars</a>
 </div>
